# general-contractor-agent-demo

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  EXECUTION_GUIDE.md  QUICKSTART.md  README.md  README.md.backup  SUMMARY.md  TESTING.md  Workshop Agenda.md  detailed_shed_execution_output.txt  docker-compose.yaml  main.py  package-lock.json  pyproject.toml  start-docker.sh  start.py  test-docker-stack.sh  test_mcp_integration.py  test_shed_demo.py  test_shed_detailed.py
backend/: Dockerfile  config.py
backend/agents/: __init__.py  architect.py  carpenter.py  electrician.py  general_contractor.py  hvac.py  mason.py  painter.py  plumber.py  project_planner.py  roofer.py
backend/api/: routes.py
backend/mcp_servers/: materials_supplier.py  permitting.py
backend/orchestration/: task_manager.py
backend/utils/: __init__.py  activity_logger.py  loop_detection.py  token_tracker.py
deployment/: README.md
deployment-ecs/: README.md
deployment-ecs/backend-runtime/: deploy.sh
deployment-ecs/materials-supplier/: deploy.sh  task-definition.json
deployment-ecs/permitting-service/: Dockerfile  deploy.sh
deployment-ecs/scripts/: update-ip.sh
deployment/agentcore-runtime/: Dockerfile  deploy.sh  (+1 more)
docs/: ACTIVITY_MONITOR_ENHANCEMENTS.md  ARCHITECTURE.md  CHANGELOG.md  CURRENT_LIMITATIONS.md  DOCKER.md  DOCKER_TROUBLESHOOTING.md  DYNAMIC_PLANNING.md  EXAMPLE_PROJECTS.md  EXECUTION_GUIDE.md  LOOP_PROTECTION.md  PROJECT_SPECIFICATIONS.md  QUICKSTART.md  TESTING.md  architecture.md
example_output/: back_deck_response.json  dog_house.txt  kitchen.json  kitchen_remodel.txt
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
tests/: test_agent.py  test_dog_house_simple.py  test_dynamic_planning.py  test_dynamic_structure.py  test_mcp_integration.py  test_shed_demo.py  test_shed_detailed.py  test_shed_project.py
(+39 files in other folders)
