[project]
name = "general-contractor-agent-demo"
version = "0.1.0"
description = "Multi-agent orchestration system demonstrating construction project management with AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "strands-agents>=0.5.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "autoflake>=2.3.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "types-boto3>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
recursive = true
exclude = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100
